Closed Bug 328160 Opened 19 years ago Closed 19 years ago

The name lookup for "bzero" did not find a declaration on AIX

Categories

(Core Graveyard :: GFX: Gtk, defect)

Other
AIX
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ganesh.mozilla, Unassigned)

Details

(Keywords: fixed1.8.0.2, fixed1.8.1, Whiteboard: [nvn-dl])

Attachments

(1 file)

User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; .NET CLR 1.1.4322) Build Identifier: Building Firefox 1.5 with "pango enabled" on AIX5.3 machine end up with the following error: "/firefox15/mozilla/gfx/src/gtk/nsFontMetricsPango.cpp", line 1319.9: 1540-0274 (S) The name lookup for "bzero" did not find a declaration. But when adding #include <strings.h> header file to the top of the "nsFontMetricsPango.cpp" file resolves the problem. Reproducible: Always Steps to Reproduce: 1. Start building Firefox 1.5 with "pango enabled" Actual Results: Build fails with 'The name lookup for "bzero" did not find a declaration' error. Expected Results: The declaration of bzero should be included in the corresponding source file and the build should not fail. https://bugzilla.mozilla.org/show_bug.cgi?id=237729 The above bug looks similar to this problem but it failed in different source file.
OS: Other → AIX
Attachment #212730 - Flags: review?
Comment on attachment 212730 [details] [diff] [review] Patch for firefox 1.5 In future, please request review from some particular person. Setting review? with no target means it will probably be ignored. Thanks for the patch though! I'll check it in for you.
Attachment #212730 - Flags: superreview+
Attachment #212730 - Flags: review?
Attachment #212730 - Flags: review+
Comment on attachment 212730 [details] [diff] [review] Patch for firefox 1.5 I'll also approve this trivial build fix for 1.8.1 ... should go on 1.8.0.2 too
Attachment #212730 - Flags: approval1.8.0.2?
Attachment #212730 - Flags: approval-branch-1.8.1+
checked in on trunk and 1.8.1 branch.
Status: UNCONFIRMED → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Comment on attachment 212730 [details] [diff] [review] Patch for firefox 1.5 approved for 1.8.0 branch, a=dveditz for drivers
Attachment #212730 - Flags: approval1.8.0.2? → approval1.8.0.2+
marking [nvn-dl], which removes this bug from the "to be verified by QA" list for Firefox 1.5.0.2.
Whiteboard: [nvn-dl]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: