Bug 328160. Include strings.h to get bzero. r+sr=roc, patch by Ganesh